--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My personal resume",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "^3.2.1"
+  },
+  "dependencies": {
+    "node-static": "^0.7.11"
   }
 }
