--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My personal resume",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node script.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
     "gulp-sass": "^3.2.1"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "node-static": "^0.7.11"
   }
 }
